force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/ucinn_ascendv2__Social_Media__c.object-meta.xml
<CustomObject>
    <description>Used for maintaining social media accounts, such as Facebook and LinkedIn.</description>
    <label>Social Media</label>
    <nameField>
        <label>Social Media Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>