force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/fields/Social_Media_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>