force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Social Media</relationshipLabel>
    <relationshipName>Social_Media</relationshipName>
    <type>Lookup</type>
</CustomField>