force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/fields/ucinn_ascendv2__Notes__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Notes__c</fullName>
    <label>Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>