force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/fields/ucinn_ascendv2__Platform__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Blogger</fullName>
                <isActive>false</isActive>
                <label>Blogger</label>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Flickr</fullName>
            </value>
            <value>
                <fullName>Instagram/Threads</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
                <isActive>false</isActive>
                <label>Line</label>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Pinterest</fullName>
                <isActive>false</isActive>
                <label>Pinterest</label>
            </value>
            <value>
                <fullName>Skype</fullName>
            </value>
            <value>
                <fullName>SnapChat</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Twitter/X</fullName>
            </value>
            <value>
                <fullName>Website/URL</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Youtube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>