force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/fields/ucinn_ascendv2__Social_Handle__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Social_Handle__c</fullName>
    <label>Social Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>