force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/fields/ucinn_ascendv2__Social_Media_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Social_Media_Name_Auto_Number__c</fullName>
    <displayFormat>SM-{0000000}</displayFormat>
    <label>Social Media Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>