force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/fields/ucinn_ascendv2__URL__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>