force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/fields/ucinn_portal_Is_Show_On_Directory__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Is_Show_On_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show On Directory</label>
    <type>Checkbox</type>
</CustomField>