force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/recordTypes/ucinn_ascendv2__Contact_Social_Media.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Contact_Social_Media</fullName>
    <active>true</active>
    <description>A constituent&apos;s social media.</description>
    <label>Contact Social Media</label>
</RecordType>