force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/recordTypes/ucinn_ascendv2__Organization_Social_Media.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Organization_Social_Media</fullName>
    <active>true</active>
    <description>An organization&apos;s social media.</description>
    <label>Organization Social Media</label>
</RecordType>