force-app/main/default/objects/ucinn_ascendv2__Social_Media__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Platform__c</columns>
    <columns>ucinn_ascendv2__URL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Social_Media__c.ucinn_ascendv2__Contact_Social_Media</value>
    </filters>
    <label>All</label>
</ListView>